Added new text to platform settings card

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@ Software.
     <meta name="theme-color" content="#17c1e8" />
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Room Rental AI Assistant</title>
+    <title>ChattyRental</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
